// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`blank request 1`] = `
<div>
  <div
    className="sh sh--y"
  >
    <h1
      className="sh-title"
    >
      Cosmic Incursion
    </h1>
  </div>
  <div
    className="g g--top"
  >
    <div
      className="g--7 m-v500"
    >
      <textarea
        aria-label="Description of the problem"
        className={
          Object {
            "data-css-15q8vxe": "",
          }
        }
        defaultValue=""
        name="description"
        onBlur={[Function]}
        onFocus={null}
        onInput={[Function]}
        placeholder="How can we help?"
      />
    </div>
    <div
      className="g--5 m-v500"
    >
      <div
        className="br br-a200"
      >
        <div
          className="css-19ub58"
          onClick={[Function]}
          onDragEnter={[Function]}
          onDragLeave={[Function]}
          onDragOver={[Function]}
          onDragStart={[Function]}
          onDrop={[Function]}
          style={Object {}}
        >
          <img
            alt=""
            aria-hidden={true}
            height="324"
            src="/static/img/image-upload.png"
            style={
              Object {
                "display": "block",
                "height": "auto",
                "width": "100%",
              }
            }
            width="479"
          />
          <input
            accept="image/*"
            multiple={false}
            onChange={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
            type="file"
          />
        </div>
        <div
          className="br br-t200"
          style={
            Object {
              "position": "relative",
            }
          }
        >
          <button
            className="btn btn--w btn--b"
            onClick={[Function]}
            style={
              Object {
                "visibility": "visible",
                "width": "100%",
              }
            }
          >
            Upload Photo
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="g m-v500 css-1k8tu3j"
  >
    <div
      className="g--9 t--info m-v200 css-hn0yet"
    />
    <button
      className="btn g--3"
      disabled={false}
      onClick={[Function]}
    >
      Next
    </button>
  </div>
</div>
`;

exports[`existing description 1`] = `
<div>
  <div
    className="sh sh--y"
  >
    <h1
      className="sh-title"
    >
      Cosmic Incursion
    </h1>
  </div>
  <div
    className="g g--top"
  >
    <div
      className="g--7 m-v500"
    >
      <textarea
        aria-label="Description of the problem"
        className={
          Object {
            "data-css-fgw5c1": "",
          }
        }
        defaultValue="Please pick up my bulk items. "
        name="description"
        onBlur={[Function]}
        onFocus={null}
        onInput={[Function]}
        placeholder="How can we help?"
      />
    </div>
    <div
      className="g--5 m-v500"
    >
      <div
        className="br br-a200"
      >
        <div
          className="css-19ub58"
          onClick={[Function]}
          onDragEnter={[Function]}
          onDragLeave={[Function]}
          onDragOver={[Function]}
          onDragStart={[Function]}
          onDrop={[Function]}
          style={Object {}}
        >
          <img
            alt=""
            aria-hidden={true}
            height="324"
            src="/static/img/image-upload.png"
            style={
              Object {
                "display": "block",
                "height": "auto",
                "width": "100%",
              }
            }
            width="479"
          />
          <input
            accept="image/*"
            multiple={false}
            onChange={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
            type="file"
          />
        </div>
        <div
          className="br br-t200"
          style={
            Object {
              "position": "relative",
            }
          }
        >
          <button
            className="btn btn--w btn--b"
            onClick={[Function]}
            style={
              Object {
                "visibility": "visible",
                "width": "100%",
              }
            }
          >
            Upload Photo
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="g m-v500 css-1k8tu3j"
  >
    <div
      className="g--9 t--info m-v200 css-hn0yet"
    />
    <button
      className="btn g--3"
      disabled={false}
      onClick={[Function]}
    >
      Next
    </button>
  </div>
</div>
`;

exports[`service with metadata 1`] = `
<div>
  <div
    className="sh sh--y"
  >
    <h1
      className="sh-title"
    >
      Cosmic Incursion
    </h1>
  </div>
  <div
    className="g g--top"
  >
    <div
      className="g--7 m-v500"
    >
      <textarea
        aria-label="Description of the problem"
        className={
          Object {
            "data-css-15q8vxe": "",
          }
        }
        defaultValue=""
        name="description"
        onBlur={[Function]}
        onFocus={null}
        onInput={[Function]}
        placeholder="How can we help?"
      />
      <div>
        <label
          className="txt"
        >
          <span
            className="txt-l"
          >
            Please provide any other relevant information:
             
          </span>
          <textarea
            aria-label="Please provide any other relevant information:"
            aria-required={false}
            className="txt-f"
            name="ST-CMTS"
            onChange={[Function]}
            rows="5"
            value=""
          />
        </label>
      </div>
    </div>
    <div
      className="g--5 m-v500"
    >
      <div
        className="br br-a200"
      >
        <div
          className="css-19ub58"
          onClick={[Function]}
          onDragEnter={[Function]}
          onDragLeave={[Function]}
          onDragOver={[Function]}
          onDragStart={[Function]}
          onDrop={[Function]}
          style={Object {}}
        >
          <img
            alt=""
            aria-hidden={true}
            height="324"
            src="/static/img/image-upload.png"
            style={
              Object {
                "display": "block",
                "height": "auto",
                "width": "100%",
              }
            }
            width="479"
          />
          <input
            accept="image/*"
            multiple={false}
            onChange={[Function]}
            style={
              Object {
                "display": "none",
              }
            }
            type="file"
          />
        </div>
        <div
          className="br br-t200"
          style={
            Object {
              "position": "relative",
            }
          }
        >
          <button
            className="btn btn--w btn--b"
            onClick={[Function]}
            style={
              Object {
                "visibility": "visible",
                "width": "100%",
              }
            }
          >
            Upload Photo
          </button>
        </div>
      </div>
    </div>
  </div>
  <div
    className="g m-v500 css-1k8tu3j"
  >
    <div
      className="g--9 t--info m-v200 css-hn0yet"
    />
    <button
      className="btn g--3"
      disabled={false}
      onClick={[Function]}
    >
      Next
    </button>
  </div>
</div>
`;
